Changes made in login.html

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <head>
 <title>login</title>
 </head>
-
+<p> Hello</p>
 <form method="POST" action="login1.php" ><br /><br />
 
 <center>username:<input type="text" placeholder="enter username" name="name" required><br />
